# add-gym

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sagemaker-entrypoint.sh
.github/workflows/: publish_model.yml  train_model.yml
add_gym/: it.py  main.py  robot.py  view.py
add_gym/anim/: kin_char_model.py  motion.py  motion_lib.py
add_gym/configs/: test.yaml  train.yaml  view.yaml
add_gym/configs/agent/: add_g1.yaml
add_gym/configs/distributed/: ddp.yaml
add_gym/configs/engine/: genesis.yaml  mjwarp.yaml
add_gym/configs/robot/: g1.yaml
add_gym/configs/task/: pose.yaml
add_gym/engine/: __init__.py  base_engine.py  genesis_engine.py  mjwarp_engine.py
add_gym/envs/: env.py
add_gym/learning/: amp_agent.py  base_agent.py  base_model.py  diff_normalizer.py  distribution_categorical.py  distribution_gaussian_diag.py  experience_buffer.py  mp_optimizer.py  normalizer.py  ppo_agent.py  ppo_model.py  return_tracker.py  sampler.py
add_gym/learning/add/: add_agent.py  add_done.py  add_model.py  add_motion.py  add_observation.py  add_reward.py
add_gym/util/: arg_parser.py  circular_buffer.py  logger.py  stats_tracker.py  tb_logger.py  torch_util.py
assets/motions/: dance1_subject1.motion  run2_subject4_trimmed.motion  walk1_subject1_trimmed.motion
deploy/: .gitignore  requirements.txt  sagemaker-job-config.yaml  submit_sagemaker_job.py  train-config.yaml
publish/: push_to_hf.py  requirements.txt
terraform/: .gitignore  main.tf  outputs.tf  runner-user-data.sh.tpl  terraform.tfvars.example  variables.tf
(+9 files in other folders)
